# kuda_idem_template

./: .gitignore  LICENSE  README.md  edit_message.py  events.html  kuda_idem_template.py  pyproject.toml  pyqt_gui.py  template.j2
